--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,6 @@ services:
     env: docker
     plan: free
     dockerfilePath: backend/Dockerfile
-    buildCommand: ""
-    startCommand: ""
     envVars:
       - key: DATABASE_URL
         value: postgres://fleetadmin:fleetpass@postgres:5432/fleetdb
@@ -17,11 +15,10 @@ services:
     env: docker
     plan: free
     dockerfilePath: frontend/Dockerfile
-    buildCommand: ""
-    startCommand: ""
     envVars:
       - key: VITE_GRAPHQL_ENDPOINT
         value: http://hasura:8080/v1/graphql
+    # Render will use port 80 by default for web services
 
   - type: web
     name: hasura
