--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: backend
     env: docker
     plan: free
-    dockerfilePath: backend/Dockerfile
+    dockerfilePath: Dockerfile.backend
     envVars:
       - key: DATABASE_URL
         value: postgres://fleetadmin:fleetpass@postgres:5432/fleetdb
@@ -14,7 +14,7 @@ services:
     name: frontend
     env: docker
     plan: free
-    dockerfilePath: frontend/Dockerfile
+    dockerfilePath: Dockerfile.frontend
     envVars:
       - key: VITE_GRAPHQL_ENDPOINT
         value: http://hasura:8080/v1/graphql
